[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://scenes/menu/BG.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/resources/UITheme.tres" type="Theme" id=3]
[ext_resource path="res://assets/sprites/buttons/play.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/buttons/play2.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/buttons/help.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/buttons/help2.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/buttons/set.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/buttons/auth2.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/buttons/set2.png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/buttons/ex2.png" type="Texture" id=11]
[ext_resource path="res://assets/sprites/buttons/auth.png" type="Texture" id=12]
[ext_resource path="res://assets/sprites/buttons/ex.png" type="Texture" id=13]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )

[node name="BG" parent="." instance=ExtResource( 2 )]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -720.0
margin_right = 512.0
custom_constants/separation = 12
alignment = 1

[node name="Play" type="TextureButton" parent="VBoxContainer"]
margin_top = 16.0
margin_right = 512.0
margin_bottom = 144.0
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 5 )

[node name="Help" type="TextureButton" parent="VBoxContainer"]
margin_top = 156.0
margin_right = 512.0
margin_bottom = 284.0
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 7 )

[node name="Settings" type="TextureButton" parent="VBoxContainer"]
margin_top = 296.0
margin_right = 512.0
margin_bottom = 424.0
texture_normal = ExtResource( 8 )
texture_hover = ExtResource( 10 )

[node name="Credits" type="TextureButton" parent="VBoxContainer"]
margin_top = 436.0
margin_right = 512.0
margin_bottom = 564.0
texture_normal = ExtResource( 12 )
texture_hover = ExtResource( 9 )

[node name="Quit" type="TextureButton" parent="VBoxContainer"]
margin_top = 576.0
margin_right = 512.0
margin_bottom = 704.0
texture_normal = ExtResource( 11 )
texture_hover = ExtResource( 13 )

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="VBoxContainer/Help" to="." method="_on_Help_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
